<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Share grocery list -->
    <item
        android:id="@+id/action_share_list"
        android:icon="@drawable/ic_share"
        android:title="@string/share_list"
        app:showAsAction="ifRoom" />

    <!-- Clear purchased items -->
    <item
        android:id="@+id/action_clear_purchased"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear_purchased"
        app:showAsAction="never" />

    <!-- Organize by category -->
    <item
        android:id="@+id/action_organize_category"
        android:title="@string/organize_by_category" />

    <!-- Organize by store -->
    <item
        android:id="@+id/action_organize_store"
        android:title="@string/organize_by_store" />

    <!-- Generate from meal plan -->
    <item
        android:id="@+id/action_generate_plan"
        android:icon="@drawable/ic_generate"
        android:title="@string/generate_from_plan"
        app:showAsAction="never" />

    <!-- Add custom item -->
    <item
        android:id="@+id/action_add_custom"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add_custom_item"
        app:showAsAction="never" />
</menu>